<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_theme"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/result"
        android:textAlignment="viewEnd"
        android:textColor="#B12D2D"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_all_clean"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons"
            android:text="@string/ac"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons"
            android:text="@string/delete_last_char"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_percent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons"
            android:text="@string/percent"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_division"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons"
            android:text="@string/division"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_seven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_eight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_nine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_multiplication"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons"
            android:text="@string/multiplication"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_four"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons"
            android:text="@string/four"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_five"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_six"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_zero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:backgroundTint="@color/buttons"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons"
            android:text="@string/dot"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_equally"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons"
            android:text="@string/equally"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
